<resources>
    <string name="app_name">Timetable</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_classes">Classes</string>
    <string name="title_activity_class_new">New Class</string>
    <string name="title_activity_class_edit">Edit Class</string>
    <string name="title_activity_class_time_new">New Time</string>
    <string name="title_activity_class_time_edit">Edit Time</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_assignments">Assignments</string>
    <string name="title_activity_assignment_new">New Assignment</string>
    <string name="title_activity_assignment_edit">Edit Assignment</string>
    <string name="title_exams">Exams</string>
    <string name="title_activity_exam_new">New Exam</string>
    <string name="title_activity_exam_edit">Edit Exam</string>
    <string name="title_subjects">Subjects</string>
    <string name="title_activity_subjects">Manage subjects</string>
    <string name="title_activity_subject_new">New Subject</string>
    <string name="title_activity_subject_edit">Edit Subject</string>
    <string name="title_events">Events</string>
    <string name="title_activity_event_new">New Event</string>
    <string name="title_activity_event_edit">Edit Event</string>
    <string name="title_activity_timetables">Manage timetables</string>
    <string name="title_activity_timetable_new">New Timetable</string>
    <string name="title_activity_timetable_edit">Edit Timetable</string>
    <string name="title_activity_term_new">New Term</string>
    <string name="title_activity_term_edit">Edit Term</string>
    <string name="title_other_notices">Other notices</string>
    <string name="title_license">License</string>
    <string name="title_licenses">Licenses</string>
    <string name="tab_today">Today</string>
    <string name="tab_upcoming">Upcoming</string>
    <string name="no_classes_today">No classes today!</string>
    <plurals name="class_card_assignment_text">
        <item quantity="one">%1$d task due</item>
        <item quantity="other">%1$d tasks due</item>
    </plurals>
    <plurals name="assignments_overdue_text">
        <item quantity="one">1 assignment overdue</item>
        <item quantity="other">%1$d assignments overdue</item>
    </plurals>
    <string name="due_overdue">Overdue</string>
    <string name="due_today">Today</string>
    <string name="due_tomorrow">Tomorrow</string>
    <string name="due_this_week">This week</string>
    <string name="due_next_week">Next week</string>
    <string name="due_this_month">This month</string>
    <string name="due_later">Later</string>
    <string name="property_abbreviation">Abbreviation (optional)</string>
    <string name="property_name">Name</string>
    <string name="message_invalid_name">This name is invalid</string>
    <string name="assignment">Assignment</string>
    <string name="exam">Exam</string>
    <string name="event">Event</string>
    <string name="property_start_date">Start date</string>
    <string name="property_end_date">End date</string>
    <string name="message_first_timetable_required">You need to have at least one timetable to use the functionality of this app.</string>
    <string name="property_scheduling_type">Scheduling type</string>
    <string name="property_scheduling_number_of_weeks">Number of weeks</string>
    <string-array name="scheduling_types">
        <item>Fixed</item>
        <item>Week rotation</item>
    </string-array>
    <string-array name="scheduling_week_rotations">
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>4 weeks</item>
    </string-array>
    <string name="message_set_current_timetable">Switched timetable to \'%1$s\'</string>
    <string name="agenda_showing_completed">Completed items are now visible</string>
    <string name="agenda_hiding_completed">Completed items are now hidden</string>
    <string name="property_subject">Subject</string>
    <string name="property_room">Room</string>
    <string name="property_building">Building</string>
    <string name="property_teacher">Teacher</string>
    <string name="message_subject_required">You must enter a subject for this class</string>
    <string name="message_empty_detail">Please check your inputs! At least one detail tab is completely empty</string>
    <string name="message_missing_time_for_detail">Some detail tabs are missing time periods</string>
    <string name="property_days">Days</string>
    <string name="property_weeks">Weeks</string>
    <string name="property_date">Date</string>
    <string name="property_start_time">Start Time</string>
    <string name="property_end_time">End Time</string>
    <string name="message_days_required">You need to choose at least one day</string>
    <string name="message_weeks_required">You need to select at least one week</string>
    <string name="message_start_time_after_end">The start time of your class cannot be after the end time</string>
    <string name="message_start_time_equal_end">The start time of your class cannot equal the end time</string>
    <string name="message_times_required">You need to enter a start time and end time</string>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="week_item">Week %1$s</string>
    <string name="no_subject">No subject</string>
    <string name="property_title">Title</string>
    <string name="property_detail">Detail</string>
    <string name="property_notes">Notes</string>
    <string name="property_class">Class</string>
    <string name="property_due_date">Due date</string>
    <string name="property_progress">%1$d%% complete</string>
    <string name="property_location">Location</string>
    <string name="message_title_required">You must enter a title</string>
    <string name="message_class_required">You must choose a class</string>
    <string name="message_due_date_required">You must select a due date</string>
    <string name="placeholder_notes_empty">
        It looks like you haven\'t entered any additional notes here.
    </string>
    <string name="message_assignment_completed">Marked one item as complete</string>
    <string name="property_module">Unit / module name</string>
    <string name="property_exam_date">Exam date</string>
    <string name="property_duration">Duration</string>
    <string name="property_seat">Seat</string>
    <string name="property_resit">Resit</string>
    <string name="message_date_required">You must choose a date</string>
    <string name="message_exam_time_required">You must enter an exam time</string>
    <string name="message_exam_duration_required">You must select an exam duration</string>
    <string name="message_term_dates_required">You must specify term dates</string>
    <string name="message_start_date_equal_end_date">Your start and end dates must be different</string>
    <string name="message_start_date_after_end_date">The start date cannot be after the end date</string>
    <string name="message_both_dates_required">If you wish to set start/end dates, make sure to specify both</string>
    <string name="add_class_dates">Add start/end dates?</string>
    <string name="delete_assignment">Delete assignment</string>
    <string name="delete_class">Delete class</string>
    <string name="delete_exam">Delete exam</string>
    <string name="delete_event">Delete event</string>
    <string name="delete_subject">Delete subject</string>
    <string name="delete_timetable">Delete timetable</string>
    <string name="delete_confirmation">Are you sure you want to delete this item?
        This action cannot be undone.</string>
    <string name="delete_confirmation_class">This will also delete all related assignments and
        exams. Are you sure you want to delete this class?</string>
    <string name="delete_confirmation_subject">This will also delete all related classes including
        their assignments and exams. Are you sure you want to delete this subject?</string>
    <string name="delete_confirmation_timetable">This will delete everything related to this
        timetable including subjects, classes, assignments and exams. \n\nAre you sure you want
        to delete this timetable? This action cannot be undone.</string>
    <string name="always_do_this">Always do this</string>
    <string name="action_add_detail">Add detail</string>
    <string name="action_add_term">Add term</string>
    <string name="action_add_time">Add time</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_export">Export timetable app data</string>
    <string name="action_filter">Filter</string>
    <string name="action_import">Import timetable app data</string>
    <string name="action_new">New</string>
    <string name="action_show_all">Show all</string>
    <string name="action_settings">Settings</string>
    <string name="action_today">Today</string>
    <string name="action_undo">Undo</string>
    <string name="action_view_week">View week</string>
    <string-array name="filter_agenda_options">
        <item>Show completed</item>
        <item>Show past</item>
    </string-array>
    <string-array name="filter_classes_options">
        <item>Show all classes (including non-current)</item>
    </string-array>
    <string name="class_detail">Class detail</string>
    <string name="view_all">View all</string>
    <string name="dialog_import_warning_title">Replace app data?</string>
    <string name="dialog_import_warning_message">
        Importing will result in all current app data being lost! The app will instead be loaded
        with the data from the imported file.
        \n\nA backup of your current data will be exported in case something goes wrong.
        \n\nDo you wish to continue?
    </string>
    <string name="dialog_import_invalid_title">Invalid data file</string>
    <string name="dialog_import_invalid_message">
        The file selected cannot be imported since it is of an invalid format!
    </string>
    <string name="import_data">Import existing data</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="data_export_success">Successfully exported database to downloads folder</string>
    <string name="welcome_start_title">Welcome to your Timetable!</string>
    <string name="welcome_timetable_title">Name your timetable</string>
    <string name="welcome_timetable_subtitle">
        E.g. \'9th Grade\', \'2017\', \'Uni 1st year\', \'Year 8\'
    </string>
    <string name="welcome_timetable_sched_title">Timetable scheduling</string>
    <string name="welcome_timetable_sched_desc">
        Does your timetable have a fixed schedule (i.e. same classes each week)?
        Or do you alternate between Week A, Week B, etc.?
    </string>
    <string name="welcome_subjects_desc">Enter your subjects below, each on a different line.</string>
    <string name="welcome_subjects_hint">Mathematics\nEnglish\nScience\nEtc.</string>
    <string name="scheduling_fixed">Fixed scheduling</string>
    <string name="scheduling_rotation_two">2 week rotation (Week A, Week B)</string>
    <string name="scheduling_rotation_three">3 week rotation (Week A, Week B, Week C)</string>
    <string name="scheduling_rotation_four">4 week rotation (Week A, …, Week D)</string>
    <string name="scheduling_use_numbers">Use numbers instead of letters (e.g. Week 1 instead of Week A)</string>
    <string name="transition_1" translatable="false">transition_1</string>
</resources>