<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017 Farbod Salamat-Zadeh

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/mdu_keyline_1"
    tools:context=".ui.start.InitialSetupActivity$TimetableSchedulingFragment">

    <TextView
        android:text="@string/welcome_timetable_sched_title"
        android:textColor="@color/mdu_text_white"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mdu_keyline_1" />

    <TextView
        android:text="@string/welcome_timetable_sched_desc"
        android:textColor="@color/mdu_text_white_secondary"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mdu_keyline_1" />

    <android.support.v7.widget.CardView
        style="@style/Widget.Timetable.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mdu_keyline_2_minus_16dp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_padding">
                <RadioButton
                    android:id="@+id/radio_scheduling_fixed"
                    android:text="@string/scheduling_fixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_scheduling_2"
                    android:text="@string/scheduling_rotation_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_scheduling_3"
                    android:text="@string/scheduling_rotation_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_scheduling_4"
                    android:text="@string/scheduling_rotation_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/Widget.Timetable.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mdu_keyline_1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_padding">
                <CheckBox
                    android:id="@+id/checkbox_sched_use_numbers"
                    android:text="@string/scheduling_use_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
