<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017 Farbod Salamat-Zadeh

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:transitionName="@string/transition_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.events.EventEditActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Timetable.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_container"
            style="@style/Widget.Timetable.Toolbar.Extended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:hint="@string/property_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:theme="@style/Timetable.LightAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_title"
                        android:inputType="textShortMessage"
                        android:maxLines="1"
                        android:textSize="@dimen/card_text_primary_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    app:srcCompat="@drawable/ic_event_black_24dp"
                    style="@style/Widget.Timetable.ItemIcon" />

                <TextView
                    android:id="@+id/textView_date"
                    android:text="@string/property_date"
                    style="@style/Widget.Timetable.TextView.Item.Selectable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/mdu_keyline_2"
                    android:paddingRight="@dimen/mdu_keyline_1" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    app:srcCompat="@drawable/ic_access_time_black_24dp"
                    style="@style/Widget.Timetable.ItemIcon" />

                <TextView
                    android:id="@+id/textView_start_time"
                    android:text="@string/property_start_time"
                    style="@style/Widget.Timetable.TextView.Item.Selectable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/mdu_keyline_2"
                    android:paddingRight="@dimen/mdu_keyline_1" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView_end_time"
                android:text="@string/property_end_time"
                style="@style/Widget.Timetable.TextView.Item.Selectable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/mdu_keyline_2"
                android:paddingRight="@dimen/mdu_keyline_1" />

            <include layout="@layout/divider" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    app:srcCompat="@drawable/ic_event_note_black_24dp"
                    style="@style/Widget.Timetable.ItemIcon" />

                <EditText
                    android:id="@+id/editText_detail"
                    android:hint="@string/property_detail"
                    style="@style/Widget.Timetable.EditText.Item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/mdu_keyline_2"
                    android:paddingRight="@dimen/mdu_keyline_1" />
            </FrameLayout>

            <include layout="@layout/divider" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    app:srcCompat="@drawable/ic_location_black_24dp"
                    style="@style/Widget.Timetable.ItemIcon" />

                <EditText
                    android:id="@+id/editText_location"
                    android:hint="@string/property_location"
                    style="@style/Widget.Timetable.EditText.Item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/mdu_keyline_2"
                    android:paddingRight="@dimen/mdu_keyline_1" />
            </FrameLayout>

            <include layout="@layout/divider" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    app:srcCompat="@drawable/ic_school_black_24dp"
                    style="@style/Widget.Timetable.ItemIcon" />

                <TextView
                    android:id="@+id/textView_subject"
                    android:text="@string/property_subject"
                    style="@style/Widget.Timetable.TextView.Item.Selectable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/mdu_keyline_2"
                    android:paddingRight="@dimen/mdu_keyline_1" />
            </FrameLayout>

            <include layout="@layout/divider" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
