<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Timetable.Toolbar.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:transitionName="@string/transition_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_vertical_padding"
        android:layout_marginLeft="@dimen/content_lateral_padding"
        android:layout_marginRight="@dimen/content_lateral_padding">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:hint="@string/property_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/mdu_padding_normal">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText"
                    android:imeOptions="actionDone"
                    android:inputType="textShortMessage"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.design.widget.TextInputLayout>

            <include layout="@layout/divider" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_date_range_black_24dp"
                    style="@style/Widget.Timetable.ItemIcon" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mdu_keyline_2">
                    <TextView
                        android:id="@+id/textView_start_date"
                        android:text="@string/property_start_date"
                        style="@style/Widget.Timetable.TextView.Item.Selectable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <include layout="@layout/divider" />
                    <TextView
                        android:id="@+id/textView_end_date"
                        android:text="@string/property_end_date"
                        style="@style/Widget.Timetable.TextView.Item.Selectable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
